# NEST

./: .gitignore  .gitlab-ci.yml  Dockerfile  Readme.md  docker-compose.yml  go.mod  go.sum  package.json
.github/workflows/: enforce-branch-order.yml
ScoringEngine/: Dockerfile  docker-compose.yml  package-lock.json
ScoringEngine/database/: database.go
ScoringEngine/enum/: enum.go
ScoringEngine/scoring/: scoring.go
ScoringEngine/services/: ftp.go
api/: handlers.go  router.go
cli/: cli.go
cmd/: main.go
config/: constants.go  yamlParsing.go
database/: database.go  general_schema.sql  schema.sql
docs/: index.html  openapi.yaml
enum/: enum.go
gameconfigs/: main.yaml  main_template.yaml  web.yaml  web_template.yaml
logging/: logging.go
nest_backend/: Cargo.toml  Dockerfile
nest_backend/src/: main.rs  users.rs
parser/: yamlParsing.go
queries/mysqlfiles/: Readme.md  read&write.sql  schema&seed.sql  users.sql  users.txt
scoring/: Dockerfile  db.go  db.txt  db_test.go  ftp.go  go.sum  scoring.go  ssh.go  ssh.txt  webserver.go
scoring/cli/: cli.go
scoring/database_files/: test.yaml
scoring/logging/: logging.go  shutdown_test.go  simple_test.go
scoring/services/: ssh.go
scoring/tests/: default.yaml
services/: dns.go  ftp.go  router.go  services.go  sql.go  sql.txt  web.go
tests/: default.yaml  getrefhtml.py  test.yaml  test_yaml.yaml
tests/schemas/: default.sql
tests/site_infos/: site_info.html
tests/sshusers/: users.txt
web/: Dockerfile  handlers.go  requirements.txt  webserver.py
web/front-end/: Dockerfile  index.html  (+4 more)
(+29 files in other folders)
