[package]
name = "nest_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] } # Axum for API 
tokio = { version = "1", features = ["full"] } # used for async
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] } # Database interaction (works better with async and uses direct sql)
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
argon2 = "0.4"
rand_core = "0.6" # generates salts
anyhow = "1.0"